# docs/swagger.json
@@ -133,6 +133,11 @@
         },
         "/v1/user": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "get users",
                 "consumes": [
                     "application/json"
@@ -168,7 +173,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"totalCount\":1,\"userList\":[{\"id\":0,\"username\":\"admin\",\"random\":\"user 'admin' get random string 'EnqntiSig'\",\"password\":\"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG\",\"createdAt\":\"2018-05-28 00:25:33\",\"updatedAt\":\"2018-05-28 00:25:33\"}]}}",
+                        "description": "{\"code\":0,\"message\":\"OK\",\"data\":{\"totalCount\":1,\"userList\":[{\"id\":0,\"username\":\"admin\",\"random\":\"user\t'admin'\tget\trandom\tstring\t'EnqntiSig'\",\"password\":\"$2a$10$veGcArz47VGj7l9xN7g2iuT9TF21jLI1YGXarGzvARNdnt4inC9PG\",\"createdAt\":\"2018-05-28\t00:25:33\",\"updatedAt\":\"2018-05-28\t00:25:33\"}]}}",
                         "schema": {
                             "$ref": "#/definitions/user.SwaggerListResponse"
                         }
@@ -421,7 +426,7 @@
         }
     },
     "securityDefinitions": {
-        "": {
+        "JWT": {
             "description": "请在token字符串前加`Bearer+空格`",
             "type": "apiKey",
             "name": "Authorization",
