# handler/user/delete.go
@@ -12,6 +12,7 @@ import (
 
 // Delete godoc
 //
+//	@Security		JWT
 //	@Summary		Delete an user by the user identifier
 //	@Description	Delete user by ID
 //	@Tags			user
